// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : Blog : Byline renders correctly 1`] = `
<div
  className="byline"
>
  <img
    alt="file.png"
    src="//images.ctfassets.net/arandomfile"
  />
  <span
    className="author"
  >
    By:
     
    <a
      href="https://twitter.com/test"
    >
      test name
    </a>
  </span>
  <span
    className="date"
  >
    Aug 1 2020
  </span>
</div>
`;

exports[`Components : Pages : Blog : Byline renders correctly 2`] = `
<div
  className="byline"
>
  <span
    className="author"
  >
    By:
     
    test name
  </span>
  <span
    className="date"
  >
    Aug 1 2020
  </span>
</div>
`;
